--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>守望的个人主页</title>
+<title>wonderkun's blog</title>
 </head>
 <script language=javascript>
 if (document.domain =='blog.wonderkun.cc')
